src/test/resources/tests/run-pass/typeck/assign.rs
fn main() {
    let a = 0;
    a = 2;

    println(a);
}